@@ -1,4 +1,4 @@
-<!-- start of $Id$ -->
+<!-- start of $Id: prefs.php,v 1.5 2001/10/25 15:22:34 rossigee Exp $ -->
 <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
 		<td bgcolor="<?php echo $glob_theme->inside_color ?>">
@@ -22,6 +22,12 @@
 					<td align="right" class="prefs" valign="top"><?php echo $html_ccself ?> : </td>
 					<td align="left" class="prefs">
 						<input type="checkbox" name="cc_self" value="on" <?php if($cc_self != '') echo "checked"; ?> />
+					</td>
+				</tr>
+				<tr>
+					<td align="right" class="prefs" valign="top"><?php echo $html_hide_addresses ?> : </td>
+					<td align="left" class="prefs">
+						<input type="checkbox" name="hide_addresses" value="on" <?php if($hide_addresses != '') echo "checked"; ?> />
 					</td>
 				</tr>
 				<tr>
@@ -53,4 +59,4 @@
 		</td>
 	</tr>
 </table>
-<!-- end of $Id$ -->
+<!-- end of $Id: prefs.php,v 1.5 2001/10/25 15:22:34 rossigee Exp $ -->
